--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,17 @@
-Size.profileForm.twitterHandle=Please type in your twitter user name
-Email.profileForm.email=Please specify a valid email address
-NotEmpty.profileForm.email=Please specify your email address
-NotNull.profileForm.birthDate=Please specify your birth date
-typeMismatch.birthDate = Invalid birth date format. 
+Size.profileFormVo.twitterHandle=请输入您的 twitter 用户名
+Email.profileFormVo.email=请指定有效的电子邮件地址
+NotEmpty.profileFormVo.email=请指定您的电子邮件地址
+NotEmpty.profileFormVo.tastes=请至少输入一个
+PastLocalDate.profileFormVo.birthDate=清注明真实的生日
+NotNull.profileFormVo.birthDate=请注明您的出生日期
+
+profile.title=你的个人资料
+twitter.handle=推特域名
+email=邮箱
+birthdate=出生日期
+tastes.legend=你喜欢什么 ?
+remove=删除
+taste.placeholder=输入关键字
+add.taste=添加口味
+
+typeMismatch.birthDate=无效的出生日期格式.
