4.文件上传与错误处理

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -1,3 +1,4 @@
+#数据实体绑定异常信息
 Size.profileFormVo.twitterHandle=Please type in your twitter user name
 Email.profileFormVo.email=Please specify a valid email address
 NotEmpty.profileFormVo.email=Please specify your email address
@@ -5,6 +6,7 @@ NotEmpty.profileFormVo.tastes=Please enter at least one thing
 PastLocalDate.profileFormVo.birthDate=Please specify a real birth date
 NotNull.profileFormVo.birthDate=Please specify your birth date
 
+#页面信息
 profile.title=Your profile
 twitter.handle=Twitter handle
 email=Email
@@ -15,3 +17,9 @@ taste.placeholder=Enter a keyword
 add.taste=Add taste
 
 typeMismatch.birthDate=Invalid birth date format.
+
+#上传异常处理
+upload=Upload
+upload.io.exception=An error occurred while uploading the file. Please
+try again.
+upload.file.too.big=Your file is too big.
