--- a/src/main/resources/messages_zh.properties
+++ b/src/main/resources/messages_zh.properties
@@ -1,3 +1,4 @@
+#数据实体绑定异常信息
 Size.profileFormVo.twitterHandle=请输入您的 twitter 用户名
 Email.profileFormVo.email=请指定有效的电子邮件地址
 NotEmpty.profileFormVo.email=请指定您的电子邮件地址
@@ -5,6 +6,7 @@ NotEmpty.profileFormVo.tastes=请至少输入一个
 PastLocalDate.profileFormVo.birthDate=清注明真实的生日
 NotNull.profileFormVo.birthDate=请注明您的出生日期
 
+#页面信息
 profile.title=你的个人资料
 twitter.handle=推特域名
 email=邮箱
@@ -15,3 +17,8 @@ taste.placeholder=输入关键字
 add.taste=添加口味
 
 typeMismatch.birthDate=无效的出生日期格式.
+
+#上传异常处理
+upload=上传
+upload.io.exception=上载文件时出错。请再试一次。
+upload.file.too.big=你的档案太大了。
